# gitstat

./: .gitignore  CHANGELOG.md  README.md  git-stat  pyproject.toml
gitstat/: __main__.py  analyze.py  cli.py  colors.py  gitlog.py  output.py
