[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitstat"
version = "0.1.1"
description = "Simple git commit statistics CLI tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Wicayonima"}
]

[project.scripts]
git-stat = "gitstat.__main__:main"